--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <img src="" alt="">
         <br>
         <h2 id="title1" align="center">童謡・唱歌<br>(WarabeUta)</h2>
-        <h3 id="title2" align="left">【買い物忘れや携行忘れを防止する生活支援アプリ】</h3>
+        <h3 id="title2" align="left">【ご高齢者生活支援アプリ】</h3>
         <p>子ども時代に口ずさんだ懐かしい歌。</p>
         <p>童謡、唱歌はご高齢の方々にとって昔を懐かしみ、人生を振り返るきっかけになります。</p>
         <p>このアプリは、ご高齢の方々のそうした思いを大切に、ゆったりと余韻に浸っていただくアプリです。</p>
