--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
         <img src="" alt="">
         <br>
         <h2 id="title1" align="center">童謡・唱歌<br>(WarabeUta)</h2>
-        <h3 id="title2" align="left">【ご高齢者生活支援アプリ】</h3>
-        <p>子ども時代に口ずさんだ懐かしい歌。</p>
-        <p>童謡、唱歌はご高齢の方々にとって昔を懐かしみ、人生を振り返るきっかけになります。</p>
-        <p>このアプリは、ご高齢の方々のそうした思いを大切に、ゆったりと余韻に浸っていただくアプリです。</p>
+        <h3 id="title2" align="left">【生活・介護支援アプリ】</h3>
+        <p>童謡・唱歌は日本の心のふるさと</p>
+        <p>このアプリは、ピアノ伴奏に合わせて口づさんでいただきながら、ゆったりと余韻に浸っていただくアプリです。</p>
+        <p>特に、ご高齢の皆様には昔を懐かしみ、思い出に浸っていただけるきっかけになれば幸いです。</p>
         <h2 id="title1" align="center">プライバシーポリシー</h2>
         <h3 id="title2" align="left">【個人情報の取得】</h3>
         <p id="title3" align="left">本アプリは、利用者の個人情報を取得しません。</p>
