--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div>
         <img src="" alt="">
         <br>
-        <h2 id="title1" align="center">童謡・唱歌<br>(WarabeUta)</h2>
+        <h2 id="title1" align="center">童謡・唱歌<br>(DoyoShoka)</h2>
         <h3 id="title2" align="left">【生活・介護支援アプリ】</h3>
         <p>童謡・唱歌は日本の心のふるさと</p>
         <p>このアプリは、ピアノ伴奏に合わせて口づさんでいただきながら、ゆったりと余韻に浸っていただくアプリです。</p>
