--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
         <p>童謡・唱歌は日本の心のふるさと</p>
         <p>このアプリは、ピアノ伴奏に合わせて口づさんでいただきながら、ゆったりと余韻に浸っていただくアプリです。</p>
         <p>特に、ご高齢の皆様には昔を懐かしみ、思い出に浸っていただけるきっかけになれば幸いです。</p>
+        <p>Nursery rhymes and songs are the heart of Japan</p>
+        <p>This app is an app that allows you to relax and immerse yourself in the afterglow while listening to the piano accompaniment.</p>
+        <p>In particular, we hope that it will be an opportunity for elderly people to feel nostalgic for the past and immerse themselves in memories.</p>
         <h2 id="title1" align="center">プライバシーポリシー</h2>
         <h3 id="title2" align="left">【個人情報の取得】</h3>
         <p id="title3" align="left">本アプリは、利用者の個人情報を取得しません。</p>
