--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
         <h3 id="title2" align="left">【生活支援アプリ】</h3>
         <p>童謡・唱歌は日本の心のふるさと</p>
         <p>再生ボタンをタップすると、ピアノ伴奏が流れます。</p>
-        <p>同窓会などでみんなで歌ったり、休み時間に聴いてちょっと一息つきませんか。</p>
+        <p>同窓会などでみんなで歌ったり、仕事の合間に聴いてちょっと一息つきませんか。</p>
         <p>Nursery rhymes and songs are the heart of Japan</p>
         <p>Tap the play button to hear the piano accompaniment.</p>
-        <p>Why don't you take a break by singing it together at class reunions or listening to it during breaks?</p>
+        <p>Why don't you take a break by singing at a class reunion or by listening to it during work?</p>
         <h2 id="title1" align="center">プライバシーポリシー</h2>
         <h3 id="title2" align="left">【個人情報の取得】</h3>
         <p id="title3" align="left">本アプリは、利用者の個人情報を取得しません。</p>
