--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
           float:left
         }
     </style>
-</head>
+</head>！
 <body>
     
     <div>
         <img src="" alt="">
         <br>
-        <h2 id="title1" align="center">童謡・唱歌<br>(DoyoShoka)</h2>
-        <h3 id="title2" align="left">【生活支援アプリ】</h3>
+        <h2 id="title1" align="center">童謡・唱歌-ちょっと一息-<br></h2>
+        <h3 id="title2" align="left">【子どもの頃に口ずさんだあの曲、歌ってみませんか！】</h3>
         <p>童謡・唱歌は日本の心のふるさと</p>
         <p>再生ボタンをタップすると、ピアノ伴奏が流れます。</p>
         <p>同窓会などでみんなで歌ったり、仕事の合間に聴いてちょっと一息つきませんか。</p>
